# grokking-mechanism-test

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AGENT.md  CITATION.cff  CONTRIBUTING.md  Makefile  README.md  keras.json  pyproject.toml  requirements-dev.txt  requirements-jax.txt  requirements-tensorflow.txt  requirements-torch.txt  requirements.txt
.github/: CODEOWNERS  README-CI.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_feature_report.md  feature_request.md
.github/RULESET_BACKUP/: Main Branch Protection.json
.github/workflows/: ci.yml  ci.yml.disabled
configs/: modular_addition.yaml
dev/: prompt_guide.txt  ship.sh
runs/modular_addition/: config_used.yaml  metrics.csv
scripts/: evaluate.py  train.py  visualize.py
src/: __init__.py
src/grokking_mechanism/: __init__.py  loss.py  spectral.py
src/scripts/: __init__.py  evaluate.py  train.py  visualize.py
tests/: test_backend_smoke.py  test_evaluate_fixture.py  test_loss.py  test_modular_dataset_split.py  test_norm_min_dynamics.py  test_spectral.py  test_visualize.py
tests/fixtures/mini_run/: config_used.yaml  metrics.csv
