[project]
name = "grokking-mechanism-test"
version = "0.0.1"
description = "Keras 3 multi-backend tests for geometric grokking"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Michael McBride" }]
dependencies = ["keras>=3.0.0", "numpy>=1.24"]

[project.optional-dependencies]
torch = ["torch>=2.2"]
tensorflow = ["tensorflow>=2.15"]
jax = ["jax", "jaxlib"]
dev = ["pytest", "pytest-cov", "ruff", "black", "isort", "mypy", "pytest-watch"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"

[tool.black]
line-length = 100
target-version = ["py310"]
extend-exclude = '''
(\.git|\.mypy_cache|\.ruff_cache|\.pytest_cache|\.venv|venv|dist|build|\.pre-commit-cache|.*/\.pre-commit-cache/.*|.*/site-packages/.*|.*/\.eggs/.*)
'''

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 100
extend-exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".pytest_cache",
    ".venv",
    "venv",
    "configs",
    "dist",
    "build",
    "runs",
    ".pre-commit-cache",
    "grokking-mech-env",
    "src/grokking_mechanism_test.egg-info",
]
force-exclude = true
src = ["scripts", "tests"]

[tool.ruff.lint]
ignore = ["F541"]
select = ["E", "F", "W", "I"]
